# fastapi_fabric_cosmos_db_rag

./: .env.example  ARCHITECTURE.md  Dockerfile  README.md  config.py  dependencies.py  docker-compose.yml  exceptions.py  main.py  models.py  pyproject.toml  requirements.txt
api/v1/: chat_router.py  health_router.py
core/: __init__.py  base.py  cache.py  filters.py  logger.py  middleware.py  pagination.py
database/: __init__.py  cosmos_service.py  repositories.py
notebooks/: InsertDataIntoCosmosDB.ipynb
services/: base_chat_service.py  chat_service.py  openai_service.py
tests/: conftest.py  test_endpoints.py  test_services.py
utils/: helpers.py  validators.py
